--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,9 @@
-/[Ll]ibrary/
-/[Tt]emp/
-/[Oo]bj/
-/[Bb]uild/
-/[Bb]uilds/
-/Assets/AssetStoreTools*
+/Navecitas/[Ll]ibrary/
+/Navecitas/[Tt]emp/
+/Navecitas/[Oo]bj/
+/Navecitas/[Bb]uild/
+/Navecitas/[Bb]uilds/
+/Navecitas/Assets/AssetStoreTools*
 
 # Visual Studio 2015 cache directory
 /.vs/
